--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "personal_portpholio",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://antonio63963.github.io/personal_portfolio/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -12,6 +13,7 @@
     "@types/react-dom": "^18.0.9",
     "@types/react-router-dom": "^5.3.3",
     "classnames": "^2.3.2",
+    "gh-pages": "^4.0.0",
     "lottie-web": "^5.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -24,7 +26,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build",
+    "predeploy": "npm run build"
   },
   "eslintConfig": {
     "extends": [
