--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gh-pages": "^4.0.0",
     "lottie-web": "^5.10.0",
     "react": "^18.2.0",
+    "react-device-detect": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
