--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "personal_portpholio",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://antonio63963.github.io/personal_portfolio/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
