--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d build -r https://github.com/antonio63963/personal_portfolio/",
     "predeploy": "npm run build"
   },
   "eslintConfig": {
